chapt2 content & picture added

--- a/index.html
+++ b/index.html
@@ -105,8 +105,26 @@
                 <div class="row p-0 m-0 justify-content-center">
                     <div class="col-12 m-0 align-items-center">
                         <div class="row p-0 m-0 justify-content-center">
-                            <div class="col-12 col-md-4 m-0 court"></div>
-                            <div class="col-12 col-md-8 m-0 mycard"></div>
+                            <div class="col-12 col-md-4 m-0 court" id="vsceltics"></div>
+                            <div class="col-12 col-md-8 m-0 mycard">
+                                <p>In 2010, Lebron would then join his friends in 
+                                    the Miami Heat. Attracting a lot of hate from
+                                    fans, analysts & players.
+                                </p>
+                                <p>They went to the finals but were humbled by their
+                                    loss to the Dallas Mavericks.
+                                </p>
+                                <p>Since then, Lebron loses his villain role and 
+                                    regained his joy of playing basketball back. 
+                                    The Miami Heat would then go on to win championships
+                                    in 2011 & 2012.
+                                </p>
+                                <p>After losing in another Finals in 2014, Lebron decided
+                                    to head back to the team in his hometown, the Cleveland
+                                    Cavaliers. With his experiences, he promises
+                                    to end the Cleveland Curse this time.
+                                </p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 m-0 align-items-center">
@@ -115,25 +133,7 @@
                             <div class="col-12 col-md-8 m-0 mycard"></div>
                         </div>
                     </div>
-                    
-
-
-
-
-
-
-
-
                 </div>
-
-
-
-
-
-
-
-
-
             </div>
             
 
