--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" type="text/css">
-    <link rel="stylesheet" href="animations.css" type="text/css">
+    <link rel="stylesheet" href="mycustomstyles.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" type="text/css">
     <title>Always.Believe.</title>
@@ -67,9 +67,9 @@
 
             <div class="col-12 col-sm-9 col-lg-8 p-0 m-0 gbor" id="chapt1b">
                 <div class="row p-0 m-0 justify-content-around">
-                    <div class="box1 mt-3 fadeIn1" id=ib1></div>
-                    <div class="box1 mt-3 fadeIn2" id=ib2></div>
-                    <div class="box1 mt-3 fadeIn3" id=ib3></div>
+                    <div class="box1 mt-3 fadeIn1" id="ib1"></div>
+                    <div class="box1 mt-3 fadeIn2" id="ib2"></div>
+                    <div class="box1 mt-3 fadeIn3" id="ib3"></div>
                 </div>
                 <div class="row p-1 m-2 justify-content-center align-items-start" id="a4">
                     <div class="p-3 mt-2 fadeIn1">
@@ -107,33 +107,23 @@
                         <div class="row p-0 m-0 justify-content-center">
                             <div class="col-12 col-md-4 m-0 court" id="vsceltics"></div>
                             <div class="col-12 col-md-8 m-0 mycard">
-                                <p>In 2010, Lebron would then join his friends in 
-                                    the Miami Heat. Attracting a lot of hate from
-                                    fans, analysts & players.
+                                <p class="fadeIn1">In 2010, Lebron would then join his friends in 
+                                    the Miami Heat, suffering a humbling defeat in the Finals
+                                    to the Dallas Mavericks.
                                 </p>
-                                <p>They went to the finals but were humbled by their
-                                    loss to the Dallas Mavericks.
-                                </p>
-                                <p>Since then, Lebron loses his villain role and 
-                                    regained his joy of playing basketball back. 
-                                    The Miami Heat would then go on to win championships
+                                <p class="fadeIn2">The Miami Heat would then go on to win championships
                                     in 2011 & 2012.
                                 </p>
-                                <p>After losing in another Finals in 2014, Lebron decided
-                                    to head back to the team in his hometown, the Cleveland
-                                    Cavaliers. With his experiences, he promises
+                                <p class="fadeIn3">After losing in another Finals in 2014, Lebron decided
+                                    to return to the Cleveland Cavaliers. 
+                                    With his experiences, he promises
                                     to end the Cleveland Curse this time.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 m-0 align-items-center">
-                        <div class="row p-0 m-0 justify-content-center">
-                            <div class="col-12 col-md-4 m-0 court"></div>
-                            <div class="col-12 col-md-8 m-0 mycard"></div>
-                        </div>
-                    </div>
                 </div>
+                <a href="#chapt3"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
             </div>
             
 
