starting on chapt3revamp

--- a/index.html
+++ b/index.html
@@ -126,8 +126,19 @@
                 <a href="#chapt3"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
             </div>
             
+            <!-- 2015 loss and 3-1 -->
+            <div class="col-12 p-0 m-0 gbor" id="chapt3">
 
-                
+
+
+
+
+
+            </div>
+
+
+
+
             <!-- <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt2b">
                 <div class="col-12 col-xl-4 fadeIn1" id="c23">
                     <p>"I'm going to take my talents to South Beach and join the Miami Heat."
