--- a/index.html
+++ b/index.html
@@ -141,12 +141,21 @@
                 </div> 
             </div>
 
-            <div class="col-12 p-0 m-0 gbor" id="chapt3b">
+            <div class="col-12 p-3 m-0 gbor" id="chapt3b">
                 <div class="row p-0 m-0 justify-content-center" >
-                    <img id="#" class="fadeIn0" src="images/chapt3/bron3.jpg" alt="finals15sad">
-                    <p id="#">"When you fall short, it hurts. I’m 
-                        starting to (think) I’d rather not even make the playoffs than 
-                        to lose in the Finals. It would hurt a lot (less)."</p>
+                    <h1 id="p33">"When you fall short, it hurts.</h1>
+                    <p id="p34">"I’m starting to (think) I’d rather not even make 
+                        the playoffs than to lose in the Finals. It would hurt a 
+                        lot (less)."</p>
+                    <a href="#chapt3c"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+                </div> 
+            </div>
+
+            <div class="col-12 p-0 m-0" id="chapt3c">
+                <div class="row p-0 m-0 justify-content-center" >
+                    <img id="#" class="fadeIn0" src="images/chapt3/#.jpg" alt="finals15sad">
+                    <p id="#">Under James' leadership, the Cavaliers with the worst 
+                        record on the league, went to NBA Finals 2015.</p>
                     <p id="#">Once again, the Curse prevails. The Cavs faced
                         many injuries. The Golden State Warriors
                         handled James and the Cavaliers another Finals defeat.
