--- a/index.html
+++ b/index.html
@@ -151,14 +151,13 @@
                 </div> 
             </div>
 
-            <div class="col-12 p-0 m-0" id="chapt3c">
+            <div class="col-12 p-3 m-0 gbor" id="chapt3c">
                 <div class="row p-0 m-0 justify-content-center" >
-                    <img id="#" class="fadeIn0" src="images/chapt3/#.jpg" alt="finals15sad">
-                    <p id="#">Under James' leadership, the Cavaliers with the worst 
-                        record on the league, went to NBA Finals 2015.</p>
-                    <p id="#">Once again, the Curse prevails. The Cavs faced
-                        many injuries. The Golden State Warriors
-                        handled James and the Cavaliers another Finals defeat.
+                    <!-- <img id="#" class="fadeIn0" src="images/chapt3/#.jpg" alt="finals15sad"> -->
+                    <p id="p35">The Cavaliers didn't give up.</p>
+                    <p id="p36">In 2016, they head to the NBA Finals once again.
+                    </p>
+                    <p id="p37">So did the Warriors.
                     </p>
                     <a href="#chapt4"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                 </div> 
