--- a/index.html
+++ b/index.html
@@ -152,16 +152,24 @@
 
             <div class="col-12 p-3 m-0 gbor" id="chapt3c">
                 <div class="row p-0 m-0 justify-content-center" >
-                    <!-- <img id="#" class="fadeIn0" src="images/chapt3/#.jpg" alt="finals15sad"> -->
                     <p id="p35">The Cavaliers didn't give up.</p>
-                    <p id="p36">In 2016, they head to the NBA Finals once again.
-                    </p>
-                    <p id="p37">So did the Warriors.
-                    </p>
+                    <p id="p36">In 2016, they head to the NBA Finals once again.</p>
+                    <p id="p37">So did the Warriors. 
+                        Who quickly won 3 out of 4 games.</p>
                     <a href="#chapt4"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                 </div> 
             </div>
 
+            <!-- Comeback -->
+            <div class="col-12 p-0 m-0" id="chapt4">
+                <div class="row p-0 m-0 justify-content-center" >
+                    <img id="#" class="fadeIn0" src="images/chapt3/bron3.jpg" alt="finals15sad">
+                    <p id="p41">0 teams have won the NBA finals after being down 3-1.</p>
+                    <p id="p42">"Are the Cavs done?"</p>
+                    <p id="p43">Yes, they are. I don’t even know why that is a question.”</p>
+                    <a href="#chapt4b"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+                </div> 
+            </div>
             
             
 
