matchup page added

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 <a href="#chapt1"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
             </div>  -->
 
-            <!-- Kid from Akron  -->
+            <!-- Failure Resume -->
 
-            <div class="col-12 p-0 m-0" id="chapt1">
+            <!-- <div class="col-12 p-0 m-0" id="failure-resume">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-4 order-md-2 p-0 hundred">
                         <div class="d-flex flex-row justify-content-center">
@@ -84,7 +84,60 @@
                     </div>
 
                 </div>    
+            </div> -->
+
+            <!-- 2016 NBA Finals Matchup -->
+            <div class="col-12 p-0 m-0 hundred white" id="matchup">
+                <div class="row p-0 m-0 justify-content-center">
+                    <div class="col-12 col-md-4 hundred wine" id="vsbron"></div>
+                    <div class="col-12 col-md-4 hundred" id="vs">
+                        <div class="row third justify-content-center">
+                            <div class="wineleft"><i class="fas fa-heart-broken"></i></div>
+                            <div class="wineright">Underdogs</div>
+                            <div class="wineleft"><i class="fas fa-crown"></i></div>
+                            <div class="wineright">King James</div>
+                            <div class="wineleft"><i class="fas fa-hourglass"></i></div>
+                            <div class="wineright">Cleveland Curse</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 gbor m-0 justify-content-center">
+                                <h1>Cleveland Cavaliers <br>VS<br> Golden State Warriors</h1>
+                            </div>
+                        </div>
+                        <div class="row third justify-content-center">
+                            <div class="gsleft">???</div>
+                            <div class="gsright"><i class="fas fa-trophy"></i></div>
+                            <div class="gsleft">Defending Champions</div>
+                            <div class="gsright"><i class="fas fa-shield-alt"></i></div>
+                            <div class="gsleft">73-9</div>
+                            <div class="gsright"><i class="fas fa-medal"></i></div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 hundred blue" id="vscurry"></div>
+                </div>
+
+
+
+
+                <a href="#"><i class="fa fa-angle-double-down nextarrow" aria-hidden="true"></i></a>
             </div>
+
+
+
+
+
+            <!-- Doubt Chart -->
+            <div class="col-12 p-0 m-0 hundred gbor" id=""></div>
+
+
+            <!-- Epilogue -->
+            <div class="col-12 p-0 m-0 hundred gbor" id=""></div>
+
+
+
+
+
+
 
 
 
