added images for failure resume

--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
             </div>  -->
 
             <!-- Failure Resume -->
+            <div class="col-12 p-0 m-0 hundred white" id="failres">
+                <div class="row justify-content-center hundred">
+                    <img src="images/failures/bronback.jpg" alt="bronback">
+                    <div class="col-12 col-md-6 align-items-center hundred"></div>
+                    <div class="col-12 col-md-6 align-items-center hundred"></div>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
 
             <!-- <div class="col-12 p-0 m-0" id="failure-resume">
                 <div class="row justify-content-center">
@@ -100,7 +115,7 @@
                             <div class="wineright">Cleveland Curse</div>
                         </div>
                         <div class="row">
-                            <div class="col-12 gbor m-0 justify-content-center">
+                            <div class="col-12 m-0 justify-content-center">
                                 <h1>Cleveland Cavaliers <br>VS<br> Golden State Warriors</h1>
                             </div>
                         </div>
@@ -115,11 +130,6 @@
                     </div>
                     <div class="col-12 col-md-4 hundred blue" id="vscurry"></div>
                 </div>
-
-
-
-
-                <a href="#"><i class="fa fa-angle-double-down nextarrow" aria-hidden="true"></i></a>
             </div>
 
 
@@ -127,11 +137,11 @@
 
 
             <!-- Doubt Chart -->
-            <div class="col-12 p-0 m-0 hundred gbor" id=""></div>
+            <!-- <div class="col-12 p-0 m-0 hundred gbor" id=""></div> -->
 
 
             <!-- Epilogue -->
-            <div class="col-12 p-0 m-0 hundred gbor" id=""></div>
+            <!-- <div class="col-12 p-0 m-0 hundred gbor" id=""></div> -->
 
 
 
