failure resume layout added

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 
             <!-- Failure Resume -->
             <div class="col-12 p-0 m-0 hundred white" id="failres">
-                <div class="row justify-content-center hundred">
-                    <img src="images/failures/bronback.jpg" alt="bronback">
-                    <div class="col-12 col-md-6 align-items-center hundred"></div>
-                    <div class="col-12 col-md-6 align-items-center hundred"></div>
+                <div class="row  p-0 m-0 justify-content-center hundred">
+                    <div class="col-12 col-md-6 col-xl-3 gbor hundred"></div>
+                    <div class="col-12 col-md-6 col-xl-3 gbor hundred"></div>
+                    <div class="col-12 col-md-6 col-xl-3 gbor hundred"></div>
+                    <div class="col-12 col-md-6 col-xl-3 gbor hundred"></div>
                 </div>
             </div>
 
@@ -105,7 +106,7 @@
             <div class="col-12 p-0 m-0 hundred white" id="matchup">
                 <div class="row p-0 m-0 justify-content-center">
                     <div class="col-12 col-md-4 hundred wine" id="vsbron"></div>
-                    <div class="col-12 col-md-4 hundred" id="vs">
+                    <div class="col-12 col-md-4 hundred pt-5" id="vs">
                         <div class="row third justify-content-center">
                             <div class="wineleft"><i class="fas fa-heart-broken"></i></div>
                             <div class="wineright">Underdogs</div>
