nmcard class added

--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
             </div>  -->
 
             <!-- Failure Resume -->
-            <div class="col-12 p-0 m-0 hundred white" id="failres">
-                <div class="row  p-0 m-0 justify-content-center hundred">
-                    <div class="col-12 col-md-6 col-xl-3 gbor hundred"></div>
-                    <div class="col-12 col-md-6 col-xl-3 gbor hundred"></div>
-                    <div class="col-12 col-md-6 col-xl-3 gbor hundred"></div>
-                    <div class="col-12 col-md-6 col-xl-3 gbor hundred"></div>
+            <div class="col-12 p-0 m-0 hundred" id="failres">
+                <div class="row p-0 m-0 justify-content-center hundred">
+                    <div class="col-12 col-md-6 col-xl-3 p-5 nmbg hundred align-items-center justify-content-center">
+                        <div class="container nmcard gbor">
+                            <div class="container nmtop gbor"><img src="" alt="draft"></div>
+                            <div class="container nmbtm gbor"></div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
 
@@ -103,7 +106,7 @@
             </div> -->
 
             <!-- 2016 NBA Finals Matchup -->
-            <div class="col-12 p-0 m-0 hundred white" id="matchup">
+            <!-- <div class="col-12 p-0 m-0 hundred white" id="matchup">
                 <div class="row p-0 m-0 justify-content-center">
                     <div class="col-12 col-md-4 hundred wine" id="vsbron"></div>
                     <div class="col-12 col-md-4 hundred pt-5" id="vs">
@@ -131,7 +134,7 @@
                     </div>
                     <div class="col-12 col-md-4 hundred blue" id="vscurry"></div>
                 </div>
-            </div>
+            </div> -->
 
 
 
