--- a/index.html
+++ b/index.html
@@ -51,15 +51,19 @@
             </div>  -->
 
             <!-- Failure Resume -->
-            <div class="col-12 p-0 m-0 hundred" id="failres">
+            <div class="col-10 p-0 m-0 hundred" id="failres">
                 <div class="row p-0 m-0 justify-content-center hundred">
-                    <div class="col-12 col-md-6 col-xl-3 p-5 nmbg hundred align-items-center justify-content-center">
-                        <div class="container nmcard gbor">
-                            <div class="container nmtop gbor"><img src="" alt="draft"></div>
-                            <div class="container nmbtm gbor"></div>
-                        </div>
-
+                    <div class="col-12 col-lg-4 gbor">
+                        <h1 class="" id="fr1">The Kid from Akron</h1>
+                        <div><img class="" id="" src="images/failures/bron1.png" alt="youngbron">
+                        <h1 class="" id="fr2">LeBron</h1><h1 class="" id="fr3">James</h1></div>
                     </div>
+                    <div class="col-12 col-sm-6 col-lg-4 gbor">
+                        <p>2003 - Joined the Cleveland Cavaliers as the
+                            No.1 NBA draft pick.</p>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4 gbor"></div>
+                    
                 </div>
             </div>
 
@@ -71,39 +75,7 @@
 
 
 
-            <!-- <div class="col-12 p-0 m-0" id="failure-resume">
-                <div class="row justify-content-center">
-                    <div class="col-12 col-md-4 order-md-2 p-0 hundred">
-                        <div class="d-flex flex-row justify-content-center">
-                            <h1 class="fadeIn1" id="a1">The Kid from Akron</h1>
-                            <div><img class="fadeIn2" id="bron1" src="images/chapt1/bron1.png" alt="youngbron">
-                            <h1 class="fadeIn3" id="a2">LeBron</h1><h1 class="fadeIn3" id="a3">James</h1></div>
-                        </div>
-                    </div>
-
-                    <div class="col-12 col-md-4 order-md-1 p-0 gold align-items-center justify-content-center hundred">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="spcardgold mt-5">
-                                <p>2003 - Joined the Cleveland Cavaliers as the
-                                     No.1 NBA draft pick.</p>
-                            <p>2003 - Joined the Cleveland Cavaliers as the
-                                    No.1 NBA draft pick.</p>
-                            <p>2003 - Joined the Cleveland Cavaliers as the
-                                    No.1 NBA draft pick.</p>
-                            <p>2003 - Joined the Cleveland Cavaliers as the
-                                No.1 NBA draft pick.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-12 col-md-4 order-md-3 p-0 wine align-items-center justify-content-center hundred">
-                        <div class="row justify-content-center align-items-center">
-                            <div class="spcardwine mt-5"></div>
-                        </div>
-                    </div>
-
-                </div>    
-            </div> -->
+          
 
             <!-- 2016 NBA Finals Matchup -->
             <!-- <div class="col-12 p-0 m-0 hundred white" id="matchup">
