added content to failure resume

--- a/index.html
+++ b/index.html
@@ -52,17 +52,30 @@
 
             <!-- Failure Resume -->
             <div class="col-10 p-0 m-0 hundred" id="failres">
-                <div class="row p-0 m-0 justify-content-center hundred">
+                <div class="row p-0 m-0 justify-content-center">
                     <div class="col-12 col-lg-4 gbor">
-                        <h1 class="" id="fr1">The Kid from Akron</h1>
                         <div><img class="" id="" src="images/failures/bron1.png" alt="youngbron">
-                        <h1 class="" id="fr2">LeBron</h1><h1 class="" id="fr3">James</h1></div>
+                        </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-4 gbor">
-                        <p>2003 - Joined the Cleveland Cavaliers as the
-                            No.1 NBA draft pick.</p>
+                    <div class="col-12 col-sm-6 d-lg-none gbor third">
+                        
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-4 gbor"></div>
+                    <div class="col-12 col-sm-6 p-3 text-align-justify col-lg-8 grey gbor">
+                        <h1>Lebron James</h1>
+                        <p>2003: Joined the Cleveland Cavaliers as the
+                            No.1 NBA draft pick.
+                        </p>
+                        <p>2007: Brought the Cavaliers to their first
+                            NBA Finals but lost to the Spurs
+                        </p>
+                        <p>2010 - 2014: Went to NBA Finals with the Miami 
+                            Heat 4 times but failed twice.
+                        </p>
+                        <p>2015: Returned to Cleveland but lost to the 
+                            Golden State Warriors in the NBA Finals.
+                        </p>
+
+                    </div>
                     
                 </div>
             </div>
