added a middle flexbox

--- a/index.html
+++ b/index.html
@@ -51,16 +51,19 @@
             </div>  -->
 
             <!-- Failure Resume -->
-            <div class="col-10 p-0 m-0 hundred" id="failres">
+            <div class="col-12 p-0 m-0 hundred" id="failres">
                 <div class="row p-0 m-0 justify-content-center">
                     <div class="col-12 col-lg-4 gbor">
                         <div><img class="" id="" src="images/failures/bron1.png" alt="youngbron">
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 d-lg-none gbor third">
+                    <div class="col-12 d-lg gbor third">
                         
                     </div>
-                    <div class="col-12 col-sm-6 p-3 text-align-justify col-lg-8 grey gbor">
+                    <div class="d-none col-12 d-sm-block gbor third">
+                        
+                    </div>
+                    <div class="col-12 p-3 mt-3 text-align-justify col-lg-8 grey gbor">
                         <h1>Lebron James</h1>
                         <p>2003: Joined the Cleveland Cavaliers as the
                             No.1 NBA draft pick.
