shorten code for opening animations

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <!-- welcome message -->
             <div class="col-12 p-0 m-0 " id="welcome"> 
                 <div class="row p-0 justify-content-center opening" > 
-                    <img src="images/chuddle-dark.jpg" alt="team-huddle">
-                    <h1 class="para1">ALWAYS.</h1><h1 class="para2">BELIEVE.</h1>
-                    <p>This is a story about one of the greatest comeback in sports history.</p>
+                    <img class="fadeIn3" src="images/chuddle-dark.jpg" alt="team-huddle">
+                    <h1 class="para1 fadeIn1">ALWAYS.</h1><h1 class="para2 fadeIn2">BELIEVE.</h1>
+                    <p class="fadeIn3">This is a story about one of the greatest comeback in sports history.</p>
                     <a href="#chapt0"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                 </div> 
             </div> 
