failed attempt to add images

--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
                         <h1 id="herotxt1">Lebron</h1>
                         <h1 id="herotxt2">James</h1>
                     </div>
-                    <div class="col-md-2 p-0 m-0 order-3">
-                        
+                    <div class="col-md-2 p-0 m-0 order-3 gbor d-none d-md-block">
                     </div>
                 </div>
             </div>
