--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
             *check if some classes are unnecessary, esp col w flex*
             *fine tune animations*
             *proofread*
-            1: 2003 - 2007: rookie till loss to spurs
-            2: 2010 -2014: miami villain, championships, home
-            3: 2015 -2016: 2015 finals, 2016: 3-1
-            4: 2016: game 5,6,7
-            5: epilogue
 
             
              -->
             <!-- welcome message -->
+            <!-- 
+                add navbar
+             -->
             <!-- <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <a class="navbar-brand" href="#">Navbar</a>
@@ -70,6 +68,11 @@
             </div> 
 
             <!-- Failure Resume -->
+            <!-- 
+                add animation
+                add icons?content? in empty space
+                fix bottom white space
+             -->
             <div class="col-12 m-0 p-0 hundred" id="failr">
                 <div class="row">    
                     <div class="col-md-4 m-0 fifty order-2 order-md-1">
@@ -144,6 +147,30 @@
 
 
             <!-- 2016 NBA Finals Matchup -->
+            <div class="col-12 m-0 p-0 hundred" id="matchup"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <!-- <div class="col-12 p-0 m-0 hundred white" id="matchup">
                 <div class="row p-0 m-0 justify-content-center">
                     <div class="col-12 col-md-4 hundred wine" id="vsbron"></div>
