fixed the appearance of right white space

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             
             
             <div class="col-12 p-0 m-0 black" id="welcome"> 
-                <div class="row p-0 justify-content-center opening" > 
+                <div class="row p-0 m-0 justify-content-center opening" > 
                     <img class="fadeIn3" src="images/chuddle-dark.jpg" alt="team-huddle">
                     <h1 class="para1 fadeIn1">ALWAYS.</h1><h1 class="para2 fadeIn2">BELIEVE.</h1>
                     <p class="fadeIn3">This is a story about one of the greatest comeback in sports history.</p>
@@ -74,7 +74,7 @@
                 fix bottom white space
              -->
             <div class="col-12 m-0 p-0 hundred" id="failr">
-                <div class="row">    
+                <div class="row m-0 p-0">    
                     <div class="col-md-4 m-0 fifty order-2 order-md-1">
                         <p id="herotxt3">
                             Strive for greatness 
@@ -147,7 +147,9 @@
 
 
             <!-- 2016 NBA Finals Matchup -->
-            <div class="col-12 m-0 p-0 hundred" id="matchup"></div>
+            <div class="col-12 m-0 p-0 hundred gbor" id="matchup">
+
+            </div>
 
 
 
