added new pics, testing on expand panel animation

--- a/index.html
+++ b/index.html
@@ -148,7 +148,17 @@
 
             <!-- 2016 NBA Finals Matchup -->
             <div class="col-12 m-0 p-0 hundred gbor" id="matchup">
-
+                <div class="row m-0 p-0">
+                    <div class="col-4 p-0 m-0 hundred"></div>
+                    <div class="col-4 p-0 m-0 hundred">
+                        <img id="vscurry" src="images/matchup/curry12.png" alt="vscurry">
+                        <div id="vsbrontest" class="gbor">
+                        <img id="vsbron" src="images/matchup/bron6.png" alt="bsbron">
+                        
+                        <div class="wine" id="test">TEST</div></div>
+                    </div>
+                    <div class="col-4 p-0 m-0 hundred"></div>
+                </div>   
             </div>
 
 
