added layout of panels

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
                 <img src="images/browns.jpg" alt="1964-browns"/>
                 <p class="fadeIn1" id="c01">On 27 December 1964, the Cleveland Browns defeated the Baltimore Colts to win the National Football League Championship.</p>
-                <p class="fadeIn2" id="c02">From that day on, the city of Cleveland would not see another major sports championship</p> 
+                <p class="fadeIn2" id="c02">From that day on, the city of Cleveland would not see another major sports championship.</p> 
                 <h1 class="fadeIn3" id="c03">for over 50 years.</h1>  
                 <a href="#failr"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
             </div> 
@@ -71,7 +71,7 @@
             <!-- 
                 add animation
                 add icons?content? in empty space
-                fix bottom white space
+                fix right text in mobile
              -->
             <div class="col-12 m-0 p-0" id="failr">
                 <div class="row m-0 p-0">    
@@ -147,8 +147,24 @@
 
 
             <!-- 2016 NBA Finals Matchup/Doubts -->
-            <div class="col-12 m-0 p-0 hundred gbor" id="matchup">
-                <div class="row justify-content-center m-0 p-0">               
+            <div class="col-12 m-0 p-0 gbor" id="matchup">
+                <div class="row justify-content-center gbor m-0 p-0">
+                    <div class="d-none d-lg-block col-md-2 hundred">leftside</div>
+                    <div class="col-md-10 hundred">
+                        <div class="row">
+                            <div class="col-12 col-md-6 col-xl-3 align-items-center gbor hundred">
+                                <div class="container nmpanel gbor p-2">
+                                    <img src="images/curry.jpg">
+                                    <div class="nmpaneltxt gbor"></div>
+                                </div>
+
+
+                            </div>
+                            <div class="col-12 col-md-6 col-xl-3 gbor hundred">2</div>
+                            <div class="col-12 col-md-6 col-xl-3 gbor hundred">3</div>
+                            <div class="col-12 col-md-6 col-xl-3 gbor hundred">4</div>
+                        </div>
+                    </div>
                 </div>   
             </div>
 
