added  panel 1 sample

--- a/index.html
+++ b/index.html
@@ -149,20 +149,39 @@
             <!-- 2016 NBA Finals Matchup/Doubts -->
             <div class="col-12 m-0 p-0 gbor" id="matchup">
                 <div class="row justify-content-center gbor m-0 p-0">
-                    <div class="d-none d-lg-block col-md-2 hundred">leftside</div>
-                    <div class="col-md-10 hundred">
+                    <div class="d-none d-lg-block col-md-1 hundred">NBA FINALS 2016 REMATCH</div>
+                    <div class="col-md-11 hundred">
                         <div class="row">
-                            <div class="col-12 col-md-6 col-xl-3 align-items-center gbor hundred">
-                                <div class="container nmpanel gbor p-2">
+                            <div class="col-12 col-md-6 align-items-center gbor hundred">
+                                <div class="container nmpanel p-2">
+                                    <img src="images/curry.jpg">
+                                    <div class="nmpaneltxt gbor">
+                                        After 4 games, the Warriors led 3-1.
+                                        No NBA teams this behind
+                                        had made a comeback before 
+                                        in the NBA Finals.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 align-items-center gbor hundred">
+                                <div class="container nmpanel p-2">
                                     <img src="images/curry.jpg">
                                     <div class="nmpaneltxt gbor"></div>
                                 </div>
-
-
                             </div>
-                            <div class="col-12 col-md-6 col-xl-3 gbor hundred">2</div>
-                            <div class="col-12 col-md-6 col-xl-3 gbor hundred">3</div>
-                            <div class="col-12 col-md-6 col-xl-3 gbor hundred">4</div>
+                            <div class="col-12 col-md-6 align-items-center gbor hundred">
+                                <div class="container nmpanel p-2">
+                                    <img src="images/curry.jpg">
+                                    <div class="nmpaneltxt gbor"></div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 align-items-center gbor hundred">
+                                <div class="container nmpanel p-2">
+                                    <img src="images/curry.jpg">
+                                    <div class="nmpaneltxt gbor"></div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>   
