--- a/index.html
+++ b/index.html
@@ -165,20 +165,31 @@
                             </div>
                             <div class="col-12 col-md-6 align-items-center gbor hundred">
                                 <div class="container nmpanel p-2">
-                                    <img src="images/curry.jpg">
-                                    <div class="nmpaneltxt gbor"></div>
+                                    <img src="images/matchup/game5.png">
+                                    <div class="nmpaneltxt gbor">
+                                        But Kyrie & Lebron would each 
+                                        had 41 points to extend the series
+                                        in game 5.
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 align-items-center gbor hundred">
                                 <div class="container nmpanel p-2">
-                                    <img src="images/curry.jpg">
-                                    <div class="nmpaneltxt gbor"></div>
+                                    <img src="images/matchup/game6.jpg">
+                                    <div class="nmpaneltxt gbor">
+                                        In game 6, the Cavs avoided elimination
+                                        as Lebron scored another 41 points.
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 align-items-center gbor hundred">
                                 <div class="container nmpanel p-2">
-                                    <img src="images/curry.jpg">
-                                    <div class="nmpaneltxt gbor"></div>
+                                    <img src="images/matchup/game7.jpg">
+                                    <div class="nmpaneltxt gbor">
+                                        Game 7, everyone was glued to their seats
+                                        as the score was 89-89 for 3 minutes, which
+                                        seemed like 5 years.
+                                    </div>
                                 </div>
                             </div>
 
