made panels smaller

--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
 
 
             <!-- 2016 NBA Finals Matchup/Doubts -->
-            <div class="col-12 m-0 p-0 gbor" id="matchup">
-                <div class="row justify-content-center gbor m-0 p-0">
-                    <div class="d-none d-lg-block col-md-1 hundred">NBA FINALS 2016 REMATCH</div>
+            <div class="col-12 m-0 p-0" id="matchup">
+                <div class="row justify-content-center m-0 p-0">
+                    <div class="col-12 d-lg-block col-md-1 gbor"><h1 id="rematch">NBA FINALS 2016: REMATCH</h1></div>
                     <div class="col-md-11 hundred">
-                        <div class="row">
-                            <div class="col-12 col-md-6 align-items-center gbor hundred">
-                                <div class="container nmpanel p-2">
+                        <div class="row p-0 m-0">
+                            <div class="col-12 col-md-6 align-items-center">
+                                <div class="container nmpanel p-2 mb-5 mb-md-3">
                                     <img src="images/curry.jpg">
-                                    <div class="nmpaneltxt gbor">
+                                    <div class="nmpaneltxt">
                                         After 4 games, the Warriors led 3-1.
                                         No NBA teams this behind
                                         had made a comeback before 
@@ -163,29 +163,29 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 align-items-center gbor hundred">
-                                <div class="container nmpanel p-2">
+                            <div class="col-12 col-md-6 align-items-center">
+                                <div class="container nmpanel p-2 mb-5 mb-md-3">
                                     <img src="images/matchup/game5.png">
-                                    <div class="nmpaneltxt gbor">
+                                    <div class="nmpaneltxt">
                                         But Kyrie & Lebron would each 
                                         had 41 points to extend the series
                                         in game 5.
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 align-items-center gbor hundred">
-                                <div class="container nmpanel p-2">
+                            <div class="col-12 col-md-6 align-items-center">
+                                <div class="container nmpanel p-2 mb-5 mb-md-3">
                                     <img src="images/matchup/game6.jpg">
-                                    <div class="nmpaneltxt gbor">
+                                    <div class="nmpaneltxt">
                                         In game 6, the Cavs avoided elimination
                                         as Lebron scored another 41 points.
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 align-items-center gbor hundred">
-                                <div class="container nmpanel p-2">
+                            <div class="col-12 col-md-6 align-items-center">
+                                <div class="container nmpanel p-2 mb-5 mb-md-3">
                                     <img src="images/matchup/game7.jpg">
-                                    <div class="nmpaneltxt gbor">
+                                    <div class="nmpaneltxt">
                                         Game 7, everyone was glued to their seats
                                         as the score was 89-89 for 3 minutes, which
                                         seemed like 5 years.
