made panels more mobile friendly

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
             <!-- 2016 NBA Finals Matchup/Doubts -->
             <div class="col-12 m-0 p-0" id="matchup">
                 <div class="row justify-content-center m-0 p-0">
-                    <div class="col-12 d-lg-block col-md-1 gbor"><h1 id="rematch">NBA FINALS 2016: REMATCH</h1></div>
-                    <div class="col-md-11 hundred">
+                    <div class="col-12 d-lg-block col-md-1"><h1 id="rematch">NBA FINALS 2016: REMATCH</h1></div>
+                    <div class="col-md-11">
                         <div class="row p-0 m-0">
-                            <div class="col-12 col-md-6 align-items-center">
-                                <div class="container nmpanel p-2 mb-5 mb-md-3">
+                            <div class="col-12 col-md-6 col-xl-3 align-items-center">
+                                <div class="container nmpanel p-2 mb-5">
                                     <img src="images/curry.jpg">
                                     <div class="nmpaneltxt">
                                         After 4 games, the Warriors led 3-1.
@@ -163,8 +163,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 align-items-center">
-                                <div class="container nmpanel p-2 mb-5 mb-md-3">
+                            <div class="col-12 col-md-6 col-xl-3 align-items-center">
+                                <div class="container nmpanel p-2 mb-5">
                                     <img src="images/matchup/game5.png">
                                     <div class="nmpaneltxt">
                                         But Kyrie & Lebron would each 
@@ -173,8 +173,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 align-items-center">
-                                <div class="container nmpanel p-2 mb-5 mb-md-3">
+                            <div class="col-12 col-md-6 col-xl-3 align-items-center">
+                                <div class="container nmpanel p-2 mb-5">
                                     <img src="images/matchup/game6.jpg">
                                     <div class="nmpaneltxt">
                                         In game 6, the Cavs avoided elimination
@@ -182,8 +182,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 align-items-center">
-                                <div class="container nmpanel p-2 mb-5 mb-md-3">
+                            <div class="col-12 col-md-6 col-xl-3 align-items-center">
+                                <div class="container nmpanel p-2 mb-5">
                                     <img src="images/matchup/game7.jpg">
                                     <div class="nmpaneltxt">
                                         Game 7, everyone was glued to their seats
